make sure full sidebar menu is visible in all form factors.

--- a/web/saito/css-imports/saito-header.css
+++ b/web/saito/css-imports/saito-header.css
@@ -83,7 +83,7 @@
   opacity: 0;
   z-index: 20;
   width: 20rem;
-  height: 100vh;
+  height: calc(100vh - var(--saito-header-height) + 3px);
   overflow: auto;
 }
 
